--- a/Yolo2Rcnn.ipynb
+++ b/Yolo2Rcnn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGE8xZuZhBknAyiU/IqgQB",
+      "authorship_tag": "ABX9TyOlM2Ewu4a/f0MXHEaMzLxm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u_qwPFlZruwS",
-        "outputId": "686c6581-a361-42dc-b2ef-c22cfcec04e4"
+        "outputId": "5a6ca1bf-7b41-44d6-b5c1-2eaa372edba2"
       },
       "outputs": [
         {
@@ -58,6 +58,7 @@
         "import random\n",
         "import shutil\n",
         "import json\n",
+        "from PIL import Image\n",
         "\n",
         "# Rutas de las carpetas de imágenes y etiquetas originales\n",
         "images_dir = \"/content/drive/MyDrive/TFM/dataset_Jorge_V2/train/images\"\n",
@@ -140,7 +141,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KxXtCqI33o82",
-        "outputId": "e9e78231-0b50-43bd-8863-1613875ba757"
+        "outputId": "253f87c5-cee7-4b31-84e5-2cb5973fc31f"
       },
       "execution_count": 2,
       "outputs": [
@@ -186,29 +187,42 @@
         "                yolo_labels[file_name] = labels\n",
         "    return yolo_labels\n",
         "\n",
-        "def convert_to_mask_rcnn_labels(yolo_labels):\n",
+        "def convert_to_mask_rcnn_labels(yolo_labels, image_folder):\n",
         "    \"\"\"Convierte un archivo .txt de etiquetas de segmentación de Yolo en un .json de etiquetas de segmentación de Mask RCNN.\"\"\"\n",
         "    mask_rcnn_labels = {}\n",
-        "    for file_name, yolo_objs in yolo_labels.items(): ###### En el ejemplo de ballon antes de esto se pone el nombre de la imagen, pero no se si esta bien. ######\n",
-        "        mask_rcnn_labels[file_name.replace(\".txt\", \".jpg\")] = {\n",
+        "\n",
+        "    for file_name, yolo_objs in yolo_labels.items():\n",
+        "        image_name = file_name.replace(\".txt\", \".jpg\")\n",
+        "        image_path = os.path.join(image_folder, image_name)\n",
+        "\n",
+        "        # Obtener el tamaño de la imagen en bytes\n",
+        "        image_size_bytes = os.path.getsize(image_path)\n",
+        "\n",
+        "        # Abrir la imagen para obtener el ancho y el alto\n",
+        "        with Image.open(image_path) as img:\n",
+        "            width, height = img.size\n",
+        "\n",
+        "        mask_rcnn_labels[image_name] = {\n",
         "            \"fileref\": \"\",\n",
-        "            \"size\": 123456,  ###### Necesito hacer que lea el tamño de la imagen ######\n",
-        "            \"filename\": file_name.replace(\".txt\", \".jpg\"),\n",
+        "            \"size\": image_size_bytes,\n",
+        "            \"filename\": image_name,\n",
         "            \"base64_img_data\": \"\",\n",
         "            \"file_attributes\": {},\n",
         "            \"regions\": {}\n",
         "        }\n",
+        "\n",
         "        for i, obj in enumerate(yolo_objs):\n",
-        "            mask_rcnn_labels[file_name.replace(\".txt\", \".jpg\")][\"regions\"][str(i)] = {\n",
+        "            mask_rcnn_labels[image_name][\"regions\"][str(i)] = {\n",
         "                \"shape_attributes\": {\n",
         "                    \"name\": \"polygon\",\n",
-        "                    \"all_points_x\": [int(point[0] * 123) for point in obj[\"points\"]],  ###### Necesito saber que relacion tiene con el formato YoloV9 ######\n",
-        "                    \"all_points_y\": [int(point[1] * 456) for point in obj[\"points\"]]  ###### Necesito saber que relacion tiene con el formato YoloV9 ######\n",
+        "                    \"all_points_x\": [int(point[0] * width) for point in obj[\"points\"]],\n",
+        "                    \"all_points_y\": [int(point[1] * height) for point in obj[\"points\"]]\n",
         "                },\n",
         "                \"region_attributes\": {\n",
         "                    \"class\": obj[\"class_id\"]  # Clase del objeto\n",
         "                }\n",
         "            }\n",
+        "\n",
         "    return mask_rcnn_labels\n",
         "\n",
         "def merge_mask_rcnn_labels(input_dir, output_dir):\n",
@@ -239,7 +253,7 @@
       "metadata": {
         "id": "k8st8IU1t1ab"
       },
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -266,9 +280,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IIxjjvrr7lIU",
-        "outputId": "e2efa6fd-7b4f-45f8-a0e2-4ab3978f0cbf"
+        "outputId": "cadfdd45-2fa1-4f20-a867-5db47a2d11f7"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +306,8 @@
       "cell_type": "code",
       "source": [
         "# Carpeta de train\n",
-        "train_mask_rcnn_labels = convert_to_mask_rcnn_labels(train_yolo_labels)\n",
+        "train_image_folder = \"/content/dataset_MaskRCNN/train/images\"\n",
+        "train_mask_rcnn_labels = convert_to_mask_rcnn_labels(train_yolo_labels, train_image_folder)\n",
         "train_RCNN_labels_dir = \"/content/dataset_MaskRCNN/train/RCNN_labels\"\n",
         "\n",
         "# Guardar los resultados en la carpeta correspondiente\n",
@@ -301,10 +316,11 @@
         "\n",
         "for file_name, label_data in train_mask_rcnn_labels.items():\n",
         "    with open(os.path.join(train_RCNN_labels_dir, file_name.replace(\".jpg\", \".json\")), \"w\") as f:\n",
-        "        json.dump(label_data, f)\n",
+        "        json.dump(label_data, f, indent=4)\n",
         "\n",
         "# Carpeta de test\n",
-        "test_mask_rcnn_labels = convert_to_mask_rcnn_labels(test_yolo_labels)\n",
+        "test_image_folder = \"/content/dataset_MaskRCNN/test/images\"\n",
+        "test_mask_rcnn_labels = convert_to_mask_rcnn_labels(test_yolo_labels, test_image_folder)\n",
         "test_RCNN_labels_dir = \"/content/dataset_MaskRCNN/test/RCNN_labels\"\n",
         "\n",
         "# Guardar los resultados en la carpeta correspondiente\n",
@@ -313,10 +329,11 @@
         "\n",
         "for file_name, label_data in test_mask_rcnn_labels.items():\n",
         "    with open(os.path.join(test_RCNN_labels_dir, file_name.replace(\".jpg\", \".json\")), \"w\") as f:\n",
-        "        json.dump(label_data, f)\n",
+        "        json.dump(label_data, f, indent=4)\n",
         "\n",
         "# Carpeta de val\n",
-        "val_mask_rcnn_labels = convert_to_mask_rcnn_labels(val_yolo_labels)\n",
+        "val_image_folder = \"/content/dataset_MaskRCNN/val/images\"\n",
+        "val_mask_rcnn_labels = convert_to_mask_rcnn_labels(val_yolo_labels, val_image_folder)\n",
         "val_RCNN_labels_dir = \"/content/dataset_MaskRCNN/val/RCNN_labels\"\n",
         "\n",
         "# Guardar los resultados en la carpeta correspondiente\n",
@@ -325,12 +342,12 @@
         "\n",
         "for file_name, label_data in val_mask_rcnn_labels.items():\n",
         "    with open(os.path.join(val_RCNN_labels_dir, file_name.replace(\".jpg\", \".json\")), \"w\") as f:\n",
-        "        json.dump(label_data, f)\n"
+        "        json.dump(label_data, f, indent=4)"
       ],
       "metadata": {
-        "id": "-t1_cKN4Clmx"
+        "id": "VKhn1XL2ew85"
       },
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -366,8 +383,67 @@
       "metadata": {
         "id": "B86yZOh6MYJs"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Guardamos el nuevo dataset con ambas etiquetas.\n"
+      ],
+      "metadata": {
+        "id": "UtbetlV4f8_3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Directorio de origen\n",
+        "src_dir = \"/content/dataset_MaskRCNN\"\n",
+        "\n",
+        "# Directorio de destino\n",
+        "dest_dir = \"/content/drive/MyDrive/TFM/dataset_MaskRCNN\"\n",
+        "\n",
+        "def copy_directory(src, dest):\n",
+        "    if not os.path.exists(dest):\n",
+        "        os.makedirs(dest)\n",
+        "\n",
+        "    for root, dirs, files in os.walk(src):\n",
+        "        for name in dirs:\n",
+        "            src_dir = os.path.join(root, name)\n",
+        "            dest_dir = os.path.join(dest, os.path.relpath(src_dir, src))\n",
+        "            if not os.path.exists(dest_dir):\n",
+        "                os.makedirs(dest_dir)\n",
+        "\n",
+        "        for name in files:\n",
+        "            src_file = os.path.join(root, name)\n",
+        "            dest_file = os.path.join(dest, os.path.relpath(src_file, src))\n",
+        "            if not os.path.exists(os.path.dirname(dest_file)):\n",
+        "                os.makedirs(os.path.dirname(dest_file))\n",
+        "            shutil.copy2(src_file, dest_file)\n",
+        "\n",
+        "# Copiar el directorio de origen al directorio de destino\n",
+        "copy_directory(src_dir, dest_dir)\n",
+        "\n",
+        "print(f\"Directorio copiado de {src_dir} a {dest_dir}\")"
+      ],
+      "metadata": {
+        "id": "H9PimM_9f8gi",
+        "outputId": "196af875-5d44-4e72-d028-8af448f684b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Directorio copiado de /content/dataset_MaskRCNN a /content/drive/MyDrive/TFM/dataset_MaskRCNN\n"
+          ]
+        }
+      ]
     }
   ]
 }
