--- a/Renombrar etiquetas roboflow.ipynb
+++ b/Renombrar etiquetas roboflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP0jUduU8AC/FAl5VbwhBns",
+      "authorship_tag": "ABX9TyM6kWJEN9hUFSPskki/h6VO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sx2Zc7SnQ7nw",
-        "outputId": "f5c85c52-79cf-4657-ce44-0d6c0ceb836f"
+        "outputId": "07d1d86f-dea0-45e3-a3b2-4feb9867c4b1"
       },
       "outputs": [
         {
@@ -94,33 +94,33 @@
     {
       "cell_type": "code",
       "source": [
-        "import re\n",
-        "import shutil\n",
+        "  import re\n",
+        "  import shutil\n",
         "\n",
-        "# Función para copiar y renombrar archivos de etiquetas\n",
-        "def copiar_renombrar_etiquetas(carpeta_etiquetas, carpeta_destino):\n",
-        "    # Crear la carpeta destino si no existe\n",
-        "    if not os.path.exists(carpeta_destino):\n",
-        "        os.makedirs(carpeta_destino)\n",
+        "  # Función para copiar y renombrar archivos de etiquetas\n",
+        "  def copiar_renombrar_etiquetas(carpeta_etiquetas, carpeta_destino):\n",
+        "      # Crear la carpeta destino si no existe\n",
+        "      if not os.path.exists(carpeta_destino):\n",
+        "          os.makedirs(carpeta_destino)\n",
         "\n",
-        "    for nombre_archivo in os.listdir(carpeta_etiquetas):\n",
-        "        if nombre_archivo.endswith(\".txt\"):\n",
-        "            nuevo_nombre = re.sub(r'_jpg\\.rf\\.[a-f0-9]{32}', '', nombre_archivo)\n",
-        "            ruta_actual = os.path.join(carpeta_etiquetas, nombre_archivo)\n",
-        "            nueva_ruta = os.path.join(carpeta_destino, nuevo_nombre)\n",
-        "            shutil.copy(ruta_actual, nueva_ruta)\n",
-        "            print(f'Copiado y renombrado {nombre_archivo} a {nuevo_nombre}')\n",
+        "      for nombre_archivo in os.listdir(carpeta_etiquetas):\n",
+        "          if nombre_archivo.endswith(\".txt\"):\n",
+        "              nuevo_nombre = re.sub(r'_jpg\\.rf\\.[a-f0-9]{32}', '', nombre_archivo)\n",
+        "              ruta_actual = os.path.join(carpeta_etiquetas, nombre_archivo)\n",
+        "              nueva_ruta = os.path.join(carpeta_destino, nuevo_nombre)\n",
+        "              shutil.copy(ruta_actual, nueva_ruta)\n",
+        "              print(f'Copiado y renombrado {nombre_archivo} a {nuevo_nombre}')\n",
         "\n",
-        "# Carpeta donde se encuentran las etiquetas originales y la carpeta destino\n",
-        "carpeta_etiquetas = '/content/dataset/train/labels'\n",
-        "carpeta_destino = '/content/dataset/train/new_labels'\n",
+        "  # Carpeta donde se encuentran las etiquetas originales y la carpeta destino\n",
+        "  carpeta_etiquetas = '/content/dataset/train/labels'\n",
+        "  carpeta_destino = '/content/dataset/train/new_labels'\n",
         "\n",
-        "# Crear la carpeta destino si no existe\n",
-        "if not os.path.exists(ruta_destino):\n",
-        "    os.makedirs(ruta_destino)\n",
+        "  # Crear la carpeta destino si no existe\n",
+        "  if not os.path.exists(ruta_destino):\n",
+        "      os.makedirs(ruta_destino)\n",
         "\n",
-        "# Llamar a la función para copiar y renombrar las etiquetas\n",
-        "copiar_renombrar_etiquetas(carpeta_etiquetas, carpeta_destino)\n"
+        "  # Llamar a la función para copiar y renombrar las etiquetas\n",
+        "  copiar_renombrar_etiquetas(carpeta_etiquetas, carpeta_destino)\n"
       ],
       "metadata": {
         "colab": {
@@ -380,6 +380,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Muevo los resultados a mi drive"
+      ],
+      "metadata": {
+        "id": "Hr9AoFtWjNC_"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Ruta de la carpeta origen (la que quieres subir)\n",
@@ -420,6 +429,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Comprobación de como han quedado las imagenes"
+      ],
+      "metadata": {
+        "id": "R6SoRZcljHkb"
+      }
     },
     {
       "cell_type": "code",
@@ -491,7 +509,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,7 +556,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +605,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,7 +655,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -646,6 +664,111 @@
             "Archivos en ambas carpetas (239): ['100H0241', '100H0196', '100H0041', '100H0069', '100H0242', '100H0131', '100H0190', '100H0194', '100H0256', '100H0145', '100H0216', '100H0063', '100H0246', '100H0075', '100H0046', '100H0100', '100H0163', '100H0094', '100H0129', '100H0232', '100H0153', '100H0104', '100H0095', '100H0248', '100H0198', '100H0098', '100H0215', '100H0236', '100H0020', '100H0151', '100H0142', '100H0002', '100H0217', '100H0047', '100H0008', '100H0060', '100H0205', '100H0177', '100H0031', '100H0086', '100H0249', '100H0188', '100H0019', '100H0191', '100H0089', '100H0247', '100H0169', '100H0174', '100H0081', '100H0044', '100H0083', '100H0092', '100H0262', '100H0071', '100H0143', '100H0164', '100H0189', '100H0146', '100H0049', '100H0012', '100H0101', '100H0222', '100H0065', '100H0137', '100H0175', '100H0130', '100H0170', '100H0179', '100H0117', '100H0226', '100H0099', '100H0223', '100H0023', '100H0245', '100H0182', '100H0058', '100H0068', '100H0212', '100H0090', '100H0126', '100H0186', '100H0171', '100H0039', '100H0053', '100H0079', '100H0078', '100H0180', '100H0108', '100H0160', '100H0052', '100H0029', '100H0225', '100H0250', '100H0200', '100H0176', '100H0028', '100H0013', '100H0003', '100H0127', '100H0228', '100H0124', '100H0252', '100H0017', '100H0027', '100H0070', '100H0221', '100H0260', '100H0087', '100H0112', '100H0007', '100H0258', '100H0206', '100H0064', '100H0085', '100H0147', '100H0034', '100H0132', '100H0197', '100H0107', '100H0184', '100H0009', '100H0106', '100H0209', '100H0243', '100H0238', '100H0144', '100H0235', '100H0082', '100H0210', '100H0133', '100H0138', '100H0154', '100H0091', '100H0072', '100H0102', '100H0178', '100H0156', '100H0149', '100H0227', '100H0050', '100H0001', '100H0201', '100H0202', '100H0208', '100H0213', '100H0057', '100H0110', '100H0066', '100H0115', '100H0018', '100H0125', '100H0048', '100H0135', '100H0141', '100H0033', '100H0168', '100H0036', '100H0004', '100H0231', '100H0016', '100H0056', '100H0076', '100H0059', '100H0139', '100H0230', '100H0261', '100H0207', '100H0105', '100H0093', '100H0155', '100H0084', '100H0077', '100H0011', '100H0195', '100H0203', '100H0134', '100H0192', '100H0109', '100H0051', '100H0116', '100H0111', '100H0032', '100H0253', '100H0185', '100H0014', '100H0103', '100H0005', '100H0010', '100H0006', '100H0080', '100H0043', '100H0229', '100H0219', '100H0218', '100H0214', '100H0128', '100H0211', '100H0263', '100H0224', '100H0172', '100H0096', '100H0042', '100H0199', '100H0136', '100H0040', '100H0159', '100H0123', '100H0166', '100H0244', '100H0118', '100H0167', '100H0045', '100H0257', '100H0173', '100H0026', '100H0024', '100H0165', '100H0181', '100H0015', '100H0088', '100H0152', '100H0265', '100H0119', '100H0067', '100H0233', '100H0025', '100H0162', '100H0251', '100H0074', '100H0240', '100H0054', '100H0140', '100H0030', '100H0035', '100H0239', '100H0157', '100H0234', '100H0193', '100H0204']\n",
             "Archivos solo en la carpeta de imágenes (0): []\n",
             "Archivos solo en la carpeta de etiquetas (0): []\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Para el formato COCO segmentado"
+      ],
+      "metadata": {
+        "id": "_oyjvsx7i7Jq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "import os\n",
+        "import re\n",
+        "\n",
+        "# Ruta del archivo de anotaciones COCO original\n",
+        "coco_annotations_path = \"/content/drive/MyDrive/TFM/_annotations.coco.json\"\n",
+        "# Ruta para guardar el archivo de anotaciones COCO modificado\n",
+        "modified_coco_annotations_path = \"/content/drive/MyDrive/TFM/COCO_Segmentado.json\"\n",
+        "\n",
+        "# Leer el archivo de anotaciones COCO\n",
+        "with open(coco_annotations_path, 'r') as f:\n",
+        "    coco_data = json.load(f)\n",
+        "\n",
+        "# Expresión regular para limpiar los nombres de las imágenes\n",
+        "pattern = re.compile(r'_jpg\\.rf\\.[a-f0-9]{32}')\n",
+        "\n",
+        "# Limpiar los nombres de las imágenes en la sección \"images\"\n",
+        "for img in coco_data['images']:\n",
+        "    original_file_name = img['file_name']\n",
+        "    cleaned_file_name = pattern.sub('', original_file_name)\n",
+        "    img['file_name'] = cleaned_file_name\n",
+        "\n",
+        "# Guardar el archivo de anotaciones COCO modificado\n",
+        "with open(modified_coco_annotations_path, 'w') as f:\n",
+        "    json.dump(coco_data, f)\n",
+        "\n",
+        "print(f'Archivo de anotaciones modificado guardado en {modified_coco_annotations_path}')"
+      ],
+      "metadata": {
+        "id": "6GR1berWivvC",
+        "outputId": "beee6e9c-a02e-4a5c-e4d5-ebd788ceda89",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archivo de anotaciones modificado guardado en /content/drive/MyDrive/TFM/COCO_Segmentado.json\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Comprobaciones\n"
+      ],
+      "metadata": {
+        "id": "xwpU8wbfkAlZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "\n",
+        "# Ruta del archivo de anotaciones COCO\n",
+        "coco_annotations_path = \"/content/drive/MyDrive/TFM/COCO_Segmentado.json\"\n",
+        "\n",
+        "# Leer el archivo de anotaciones COCO\n",
+        "with open(coco_annotations_path, 'r') as f:\n",
+        "    coco_data = json.load(f)\n",
+        "\n",
+        "# Contar el número de imágenes y anotaciones\n",
+        "num_images = len(coco_data['images'])\n",
+        "num_annotations = len(coco_data['annotations'])\n",
+        "\n",
+        "print(f'Número de imágenes: {num_images}')\n",
+        "print(f'Número de anotaciones: {num_annotations}')\n"
+      ],
+      "metadata": {
+        "id": "-OfyKTdLkCr6",
+        "outputId": "0c6760f8-3cb9-4799-bffd-624105c6f468",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Número de imágenes: 239\n",
+            "Número de anotaciones: 246\n"
           ]
         }
       ]
