--- a/Yolo2Rcnn.ipynb
+++ b/Yolo2Rcnn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlM2Ewu4a/f0MXHEaMzLxm",
+      "authorship_tag": "ABX9TyODk9zgBdwNM5cZfnDziS1X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u_qwPFlZruwS",
-        "outputId": "5a6ca1bf-7b41-44d6-b5c1-2eaa372edba2"
+        "outputId": "98e04530-9259-4a96-fed8-d63fc51b5966"
       },
       "outputs": [
         {
@@ -59,6 +59,8 @@
         "import shutil\n",
         "import json\n",
         "from PIL import Image\n",
+        "import cv2\n",
+        "from datetime import datetime\n",
         "\n",
         "# Rutas de las carpetas de imágenes y etiquetas originales\n",
         "images_dir = \"/content/drive/MyDrive/TFM/dataset_Jorge_V2/train/images\"\n",
@@ -141,7 +143,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KxXtCqI33o82",
-        "outputId": "253f87c5-cee7-4b31-84e5-2cb5973fc31f"
+        "outputId": "41cbc3ba-60cf-4fc3-a127-1bd280898984"
       },
       "execution_count": 2,
       "outputs": [
@@ -157,10 +159,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Definimos las funciones de lectura y cambio de formato de las etiquetas"
+        "# Leer archivos de etiquetas de YOLO para train, test y val\n"
       ],
       "metadata": {
-        "id": "3aqlk2cHvnDn"
+        "id": "o6SkFZ7YRSj5"
       }
     },
     {
@@ -187,102 +189,20 @@
         "                yolo_labels[file_name] = labels\n",
         "    return yolo_labels\n",
         "\n",
-        "def convert_to_mask_rcnn_labels(yolo_labels, image_folder):\n",
-        "    \"\"\"Convierte un archivo .txt de etiquetas de segmentación de Yolo en un .json de etiquetas de segmentación de Mask RCNN.\"\"\"\n",
-        "    mask_rcnn_labels = {}\n",
-        "\n",
-        "    for file_name, yolo_objs in yolo_labels.items():\n",
-        "        image_name = file_name.replace(\".txt\", \".jpg\")\n",
-        "        image_path = os.path.join(image_folder, image_name)\n",
-        "\n",
-        "        # Obtener el tamaño de la imagen en bytes\n",
-        "        image_size_bytes = os.path.getsize(image_path)\n",
-        "\n",
-        "        # Abrir la imagen para obtener el ancho y el alto\n",
-        "        with Image.open(image_path) as img:\n",
-        "            width, height = img.size\n",
-        "\n",
-        "        mask_rcnn_labels[image_name] = {\n",
-        "            \"fileref\": \"\",\n",
-        "            \"size\": image_size_bytes,\n",
-        "            \"filename\": image_name,\n",
-        "            \"base64_img_data\": \"\",\n",
-        "            \"file_attributes\": {},\n",
-        "            \"regions\": {}\n",
-        "        }\n",
-        "\n",
-        "        for i, obj in enumerate(yolo_objs):\n",
-        "            mask_rcnn_labels[image_name][\"regions\"][str(i)] = {\n",
-        "                \"shape_attributes\": {\n",
-        "                    \"name\": \"polygon\",\n",
-        "                    \"all_points_x\": [int(point[0] * width) for point in obj[\"points\"]],\n",
-        "                    \"all_points_y\": [int(point[1] * height) for point in obj[\"points\"]]\n",
-        "                },\n",
-        "                \"region_attributes\": {\n",
-        "                    \"class\": obj[\"class_id\"]  # Clase del objeto\n",
-        "                }\n",
-        "            }\n",
-        "\n",
-        "    return mask_rcnn_labels\n",
-        "\n",
-        "def merge_mask_rcnn_labels(input_dir, output_dir):\n",
-        "    \"\"\"Se indica el directorio que contiene los .json que se quieren juntar en un solo archivo y se indica la ruta donde se quiere guardar dicho archivo.\"\"\"\n",
-        "    # Verificar si el directorio de salida existe, si no, crearlo\n",
-        "    os.makedirs(output_dir, exist_ok=True)\n",
-        "\n",
-        "    # Diccionario para almacenar todos los diccionarios de imágenes\n",
-        "    merged_data = {}\n",
-        "\n",
-        "    # Iterar sobre cada archivo en el directorio de entrada\n",
-        "    for filename in os.listdir(input_dir):\n",
-        "        if filename.endswith(\".json\"):\n",
-        "            filepath = os.path.join(input_dir, filename)\n",
-        "            # Abrir y cargar cada archivo JSON\n",
-        "            with open(filepath, \"r\") as f:\n",
-        "                data = json.load(f)\n",
-        "            # Extraer el nombre del archivo (sin la extensión)\n",
-        "            filename_key = os.path.splitext(filename)[0]\n",
-        "            # Agregar los datos de la imagen al diccionario fusionado\n",
-        "            merged_data[filename_key] = data\n",
-        "\n",
-        "    # Escribir el diccionario fusionado en un archivo JSON en el directorio de salida\n",
-        "    output_file = os.path.join(output_dir, \"merged_labels.json\")\n",
-        "    with open(output_file, \"w\") as f:\n",
-        "        json.dump(merged_data, f, indent=4)"
-      ],
-      "metadata": {
-        "id": "k8st8IU1t1ab"
-      },
-      "execution_count": 8,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# Leemos las etiquetas en formato YoloV9\n"
-      ],
-      "metadata": {
-        "id": "FWmDJwosu_XC"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Leer archivos de etiquetas de YOLO para train, test y val\n",
         "train_yolo_labels = read_yolo_labels(train_labels_dir)\n",
         "test_yolo_labels = read_yolo_labels(test_labels_dir)\n",
         "val_yolo_labels = read_yolo_labels(val_labels_dir)\n",
         "\n",
-        "print(\"Etiquetas de YOLO leídas para train, test y val.\")\n"
+        "print(\"Etiquetas de YOLO leídas para train, test y val.\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "IIxjjvrr7lIU",
-        "outputId": "cadfdd45-2fa1-4f20-a867-5db47a2d11f7"
+        "id": "MYgZ8yjMRQtB",
+        "outputId": "87b00fdd-84b6-4da2-91b5-4b9da3a29467"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,103 +216,158 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Convertimos las etiquetas en formato Mask RCNN"
+        "# Función para convertir etiquetas YOLO a COCO Segmentation\n"
       ],
       "metadata": {
-        "id": "3SQMSHP1vHRC"
+        "id": "9q6rCK-qRa7X"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# Carpeta de train\n",
-        "train_image_folder = \"/content/dataset_MaskRCNN/train/images\"\n",
-        "train_mask_rcnn_labels = convert_to_mask_rcnn_labels(train_yolo_labels, train_image_folder)\n",
-        "train_RCNN_labels_dir = \"/content/dataset_MaskRCNN/train/RCNN_labels\"\n",
+        "def convert_to_coco_labels(yolo_labels, image_folder, start_image_id=1, start_bbox_id=1):\n",
+        "    current_year = datetime.now().year\n",
+        "    current_date = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
         "\n",
-        "# Guardar los resultados en la carpeta correspondiente\n",
-        "if not os.path.exists(train_RCNN_labels_dir):\n",
-        "    os.makedirs(train_RCNN_labels_dir)\n",
+        "    coco_labels = {\n",
+        "        'info': {\n",
+        "            'description': 'Dataset',\n",
+        "            'url': '',\n",
+        "            'version': '1.0',\n",
+        "            'year': current_year,\n",
+        "            'contributor': '',\n",
+        "            'date_created': current_date\n",
+        "        },\n",
+        "        'licenses': [{'id': 1, 'name': None, 'url': None}],\n",
+        "        'images': [],\n",
+        "        'annotations': [],\n",
+        "        'categories': []\n",
+        "    }\n",
         "\n",
-        "for file_name, label_data in train_mask_rcnn_labels.items():\n",
-        "    with open(os.path.join(train_RCNN_labels_dir, file_name.replace(\".jpg\", \".json\")), \"w\") as f:\n",
-        "        json.dump(label_data, f, indent=4)\n",
+        "    categories_set = set()\n",
+        "    image_id = start_image_id\n",
+        "    bbox_id = start_bbox_id\n",
         "\n",
-        "# Carpeta de test\n",
-        "test_image_folder = \"/content/dataset_MaskRCNN/test/images\"\n",
-        "test_mask_rcnn_labels = convert_to_mask_rcnn_labels(test_yolo_labels, test_image_folder)\n",
-        "test_RCNN_labels_dir = \"/content/dataset_MaskRCNN/test/RCNN_labels\"\n",
+        "    for file_name, yolo_objs in yolo_labels.items():\n",
+        "        image_name = file_name.replace(\".txt\", \".jpg\")\n",
+        "        image_path = os.path.join(image_folder, image_name)\n",
         "\n",
-        "# Guardar los resultados en la carpeta correspondiente\n",
-        "if not os.path.exists(test_RCNN_labels_dir):\n",
-        "    os.makedirs(test_RCNN_labels_dir)\n",
+        "        with Image.open(image_path) as img:\n",
+        "            width, height = img.size\n",
         "\n",
-        "for file_name, label_data in test_mask_rcnn_labels.items():\n",
-        "    with open(os.path.join(test_RCNN_labels_dir, file_name.replace(\".jpg\", \".json\")), \"w\") as f:\n",
-        "        json.dump(label_data, f, indent=4)\n",
+        "        coco_labels['images'].append({\n",
+        "            'file_name': image_name,\n",
+        "            'height': height,\n",
+        "            'width': width,\n",
+        "            'id': image_id\n",
+        "        })\n",
         "\n",
-        "# Carpeta de val\n",
-        "val_image_folder = \"/content/dataset_MaskRCNN/val/images\"\n",
-        "val_mask_rcnn_labels = convert_to_mask_rcnn_labels(val_yolo_labels, val_image_folder)\n",
-        "val_RCNN_labels_dir = \"/content/dataset_MaskRCNN/val/RCNN_labels\"\n",
+        "        for obj in yolo_objs:\n",
+        "            class_id = obj[\"class_id\"]\n",
+        "            categories_set.add(class_id)\n",
         "\n",
-        "# Guardar los resultados en la carpeta correspondiente\n",
-        "if not os.path.exists(val_RCNN_labels_dir):\n",
-        "    os.makedirs(val_RCNN_labels_dir)\n",
+        "            x_yolo, y_yolo = obj[\"points\"][0]\n",
+        "            w_yolo, h_yolo = obj[\"points\"][1][0] - x_yolo, obj[\"points\"][1][1] - y_yolo\n",
+        "            x_coco = round(x_yolo * width - (w_yolo * width / 2))\n",
+        "            y_coco = round(y_yolo * height - (h_yolo * height / 2))\n",
+        "            w_coco = round(w_yolo * width)\n",
+        "            h_coco = round(h_yolo * height)\n",
         "\n",
-        "for file_name, label_data in val_mask_rcnn_labels.items():\n",
-        "    with open(os.path.join(val_RCNN_labels_dir, file_name.replace(\".jpg\", \".json\")), \"w\") as f:\n",
-        "        json.dump(label_data, f, indent=4)"
+        "            bbox = [x_coco, y_coco, w_coco, h_coco]\n",
+        "            area = w_coco * h_coco\n",
+        "\n",
+        "            segmentation = [\n",
+        "                [x_coco, y_coco, x_coco + w_coco, y_coco, x_coco + w_coco, y_coco + h_coco, x_coco, y_coco + h_coco]\n",
+        "            ]\n",
+        "\n",
+        "            coco_labels['annotations'].append({\n",
+        "                'id': bbox_id,\n",
+        "                'image_id': image_id,\n",
+        "                'category_id': class_id + 1,\n",
+        "                'bbox': bbox,\n",
+        "                'area': area,\n",
+        "                'segmentation': segmentation,\n",
+        "                'iscrowd': 0\n",
+        "            })\n",
+        "\n",
+        "            bbox_id += 1\n",
+        "\n",
+        "        image_id += 1\n",
+        "\n",
+        "    for class_id in categories_set:\n",
+        "        coco_labels['categories'].append({\n",
+        "            'id': class_id + 1,\n",
+        "            'name': str(class_id),\n",
+        "            'supercategory': ''\n",
+        "        })\n",
+        "\n",
+        "    return coco_labels\n",
+        "\n",
+        "# Convertir etiquetas YOLO a etiquetas COCO para train, test y val\n",
+        "train_coco_labels = convert_to_coco_labels(train_yolo_labels, train_images_dir)\n",
+        "test_coco_labels = convert_to_coco_labels(test_yolo_labels, test_images_dir)\n",
+        "val_coco_labels = convert_to_coco_labels(val_yolo_labels, val_images_dir)"
       ],
       "metadata": {
-        "id": "VKhn1XL2ew85"
+        "id": "Gvb9XHaPRbtw"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Juntamos todas las etiquetas en un solo .json para cada carpeta de Train, Test y Val."
+        "# Guardar las etiquetas COCO en archivos JSON únicos\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "Mf8xY0yRvO3z"
+        "id": "r2YsgAPgRfbT"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "# Rutas de los directorios de train, test y val\n",
-        "train_RCNN_labels_dir = \"/content/dataset_MaskRCNN/train/RCNN_labels\"\n",
-        "test_RCNN_labels_dir = \"/content/dataset_MaskRCNN/test/RCNN_labels\"\n",
-        "val_RCNN_labels_dir = \"/content/dataset_MaskRCNN/val/RCNN_labels\"\n",
+        "# Función para guardar etiquetas COCO en un archivo JSON\n",
+        "def save_coco_labels(labels, output_file):\n",
+        "    output_dir = os.path.dirname(output_file)\n",
+        "    os.makedirs(output_dir, exist_ok=True)\n",
+        "    with open(output_file, \"w\") as f:\n",
+        "        json.dump(labels, f, indent=4)\n",
         "\n",
-        "# Rutas de los directorios de salida fusionados\n",
-        "merged_train_RCNN_labels_dir = \"/content/dataset_MaskRCNN/train/RCNN_labels_merged/\"\n",
-        "merged_test_RCNN_labels_dir = \"/content/dataset_MaskRCNN/test/RCNN_labels_merged/\"\n",
-        "merged_val_RCNN_labels_dir = \"/content/dataset_MaskRCNN/val/RCNN_labels_merged/\"\n",
+        "# Guardar las etiquetas COCO en archivos JSON\n",
+        "save_coco_labels(train_coco_labels, \"/content/dataset_COCO/train/coco_labels.json\")\n",
+        "save_coco_labels(test_coco_labels, \"/content/dataset_COCO/test/coco_labels.json\")\n",
+        "save_coco_labels(val_coco_labels, \"/content/dataset_COCO/val/coco_labels.json\")\n",
         "\n",
-        "# Crear los directorios de salida si no existen\n",
-        "create_directories_if_not_exist(merged_train_RCNN_labels_dir, merged_test_RCNN_labels_dir, merged_val_RCNN_labels_dir)\n",
-        "\n",
-        "# Llamar a la función para fusionar los archivos JSON\n",
-        "merge_mask_rcnn_labels(train_RCNN_labels_dir, merged_train_RCNN_labels_dir)\n",
-        "merge_mask_rcnn_labels(test_RCNN_labels_dir, merged_test_RCNN_labels_dir)\n",
-        "merge_mask_rcnn_labels(val_RCNN_labels_dir, merged_val_RCNN_labels_dir)"
+        "print(\"Conversión a etiquetas COCO Segmentation completada.\")\n"
       ],
       "metadata": {
-        "id": "B86yZOh6MYJs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YNtjA6M_RkJN",
+        "outputId": "c78200cb-060a-4f8b-bdda-64ed9d4fa1a8"
       },
-      "execution_count": 10,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Conversión a etiquetas COCO Segmentation completada.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Guardamos el nuevo dataset con ambas etiquetas.\n"
+        "# Guardamos el nuevo dataset con ambas etiquetas.\n",
+        "\n"
       ],
       "metadata": {
-        "id": "UtbetlV4f8_3"
+        "id": "SRby8CsZUHjx"
       }
     },
     {
@@ -402,7 +377,7 @@
         "src_dir = \"/content/dataset_MaskRCNN\"\n",
         "\n",
         "# Directorio de destino\n",
-        "dest_dir = \"/content/drive/MyDrive/TFM/dataset_MaskRCNN\"\n",
+        "dest_dir = \"/content/drive/MyDrive/TFM/AUX\"\n",
         "\n",
         "def copy_directory(src, dest):\n",
         "    if not os.path.exists(dest):\n",
@@ -428,19 +403,19 @@
         "print(f\"Directorio copiado de {src_dir} a {dest_dir}\")"
       ],
       "metadata": {
-        "id": "H9PimM_9f8gi",
-        "outputId": "196af875-5d44-4e72-d028-8af448f684b2",
+        "id": "mJoDgdY5UHt8",
+        "outputId": "9707b2b6-e9a2-4512-b269-dbe1bcdd5431",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Directorio copiado de /content/dataset_MaskRCNN a /content/drive/MyDrive/TFM/dataset_MaskRCNN\n"
+            "Directorio copiado de /content/dataset_MaskRCNN a /content/drive/MyDrive/TFM/AUX\n"
           ]
         }
       ]
