--- a/Renombrar etiquetas roboflow.ipynb
+++ b/Renombrar etiquetas roboflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM6kWJEN9hUFSPskki/h6VO",
+      "authorship_tag": "ABX9TyMa14uDXeb7Ne5DDpiz2Zi0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sx2Zc7SnQ7nw",
-        "outputId": "07d1d86f-dea0-45e3-a3b2-4feb9867c4b1"
+        "outputId": "77537ded-bd07-4373-dcaa-2939a250ce69"
       },
       "outputs": [
         {
@@ -78,9 +78,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CEenYje9SASw",
-        "outputId": "b3081966-d0ce-44aa-993d-8dd7625618a2"
+        "outputId": "75963d73-8240-4b0b-8960-fff639e1e648"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,11 +683,20 @@
         "import json\n",
         "import os\n",
         "import re\n",
+        "import shutil\n",
+        "from pathlib import Path\n",
         "\n",
         "# Ruta del archivo de anotaciones COCO original\n",
-        "coco_annotations_path = \"/content/drive/MyDrive/TFM/_annotations.coco.json\"\n",
+        "coco_annotations_path = \"/content/drive/MyDrive/TFM/COCO_Original/_annotations.coco.json\"\n",
         "# Ruta para guardar el archivo de anotaciones COCO modificado\n",
-        "modified_coco_annotations_path = \"/content/drive/MyDrive/TFM/COCO_Segmentado.json\"\n",
+        "modified_coco_annotations_path = \"/content/drive/MyDrive/TFM/Coco_Limpio/COCO_Segmentado.json\"\n",
+        "# Ruta de la carpeta de imágenes original\n",
+        "original_images_dir = \"/content/drive/MyDrive/TFM/COCO_Original\"\n",
+        "# Ruta para guardar las imágenes con nombres limpios y el archivo de anotaciones modificado\n",
+        "cleaned_images_dir = \"/content/drive/MyDrive/TFM/Coco_Limpio\"\n",
+        "\n",
+        "# Crear la carpeta para las imágenes con nombres limpios si no existe\n",
+        "os.makedirs(cleaned_images_dir, exist_ok=True)\n",
         "\n",
         "# Leer el archivo de anotaciones COCO\n",
         "with open(coco_annotations_path, 'r') as f:\n",
@@ -696,32 +705,46 @@
         "# Expresión regular para limpiar los nombres de las imágenes\n",
         "pattern = re.compile(r'_jpg\\.rf\\.[a-f0-9]{32}')\n",
         "\n",
+        "# Diccionario para mapear los nombres originales a los nombres limpios\n",
+        "name_mapping = {}\n",
+        "\n",
         "# Limpiar los nombres de las imágenes en la sección \"images\"\n",
         "for img in coco_data['images']:\n",
         "    original_file_name = img['file_name']\n",
         "    cleaned_file_name = pattern.sub('', original_file_name)\n",
         "    img['file_name'] = cleaned_file_name\n",
+        "    name_mapping[original_file_name] = cleaned_file_name\n",
         "\n",
-        "# Guardar el archivo de anotaciones COCO modificado\n",
+        "# Copiar las imágenes con los nombres limpios\n",
+        "for original_file_name, cleaned_file_name in name_mapping.items():\n",
+        "    original_file_path = os.path.join(original_images_dir, original_file_name)\n",
+        "    cleaned_file_path = os.path.join(cleaned_images_dir, cleaned_file_name)\n",
+        "    if os.path.exists(original_file_path):\n",
+        "        shutil.copy(original_file_path, cleaned_file_path)\n",
+        "    else:\n",
+        "        print(f\"Warning: {original_file_path} does not exist.\")\n",
+        "\n",
+        "# Guardar el archivo de anotaciones COCO modificado en la nueva carpeta\n",
+        "modified_coco_annotations_path = os.path.join(cleaned_images_dir, 'COCO_Segmentado.json')\n",
         "with open(modified_coco_annotations_path, 'w') as f:\n",
         "    json.dump(coco_data, f)\n",
         "\n",
-        "print(f'Archivo de anotaciones modificado guardado en {modified_coco_annotations_path}')"
+        "print(f'Archivo de anotaciones modificado guardado en {modified_coco_annotations_path}')\n"
       ],
       "metadata": {
-        "id": "6GR1berWivvC",
-        "outputId": "beee6e9c-a02e-4a5c-e4d5-ebd788ceda89",
+        "id": "zKE3sEL5w7P9",
+        "outputId": "85dbb8dd-7cc5-4e2c-95c9-2329a7513f48",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Archivo de anotaciones modificado guardado en /content/drive/MyDrive/TFM/COCO_Segmentado.json\n"
+            "Archivo de anotaciones modificado guardado en /content/drive/MyDrive/TFM/Coco_Limpio/COCO_Segmentado.json\n"
           ]
         }
       ]
@@ -756,12 +779,12 @@
       ],
       "metadata": {
         "id": "-OfyKTdLkCr6",
-        "outputId": "0c6760f8-3cb9-4799-bffd-624105c6f468",
+        "outputId": "06641e20-c094-4281-c6c1-b3ebc56ce6ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
