--- a/Dataset_Tweaking/Yolo2Coco.ipynb
+++ b/Dataset_Tweaking/Yolo2Coco.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPXAYk/99OQwIb6KsUCQAIH",
+      "authorship_tag": "ABX9TyNl8qqCSVD2uBKhucUXRZw3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JorgeAnsotegui/TFM/blob/main/Yolo2Coco.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/JorgeAnsotegui/TFM/blob/main/Dataset_Tweaking/Yolo2Coco.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u_qwPFlZruwS",
-        "outputId": "98e04530-9259-4a96-fed8-d63fc51b5966"
+        "outputId": "aab3a5aa-c1ea-483b-a3f8-8b533552ef0c"
       },
       "outputs": [
         {
@@ -67,7 +67,7 @@
         "labels_dir = \"/content/drive/MyDrive/TFM/dataset_Jorge_V2/train/labels\"\n",
         "\n",
         "# Ruta principal del dataset final\n",
-        "main_dir = \"/content/dataset_MaskRCNN\"\n",
+        "main_dir = \"/content/dataset_COCO\"\n",
         "\n",
         "# Subcarpetas del dataset final\n",
         "train_dir = os.path.join(main_dir, \"train\")\n",
@@ -143,7 +143,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KxXtCqI33o82",
-        "outputId": "41cbc3ba-60cf-4fc3-a127-1bd280898984"
+        "outputId": "b33bb4a7-59e7-434c-ac16-40806aab1640"
       },
       "execution_count": 2,
       "outputs": [
@@ -197,7 +197,7 @@
       ],
       "metadata": {
         "id": "MYgZ8yjMRQtB",
-        "outputId": "87b00fdd-84b6-4da2-91b5-4b9da3a29467",
+        "outputId": "5ddccde7-16db-4fcb-c568-b83d4afddd56",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -225,6 +225,10 @@
     {
       "cell_type": "code",
       "source": [
+        "import os\n",
+        "from datetime import datetime\n",
+        "from PIL import Image\n",
+        "\n",
         "def convert_to_coco_labels(yolo_labels, image_folder, start_image_id=1, start_bbox_id=1):\n",
         "    current_year = datetime.now().year\n",
         "    current_date = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
@@ -306,7 +310,7 @@
         "# Convertir etiquetas YOLO a etiquetas COCO para train, test y val\n",
         "train_coco_labels = convert_to_coco_labels(train_yolo_labels, train_images_dir)\n",
         "test_coco_labels = convert_to_coco_labels(test_yolo_labels, test_images_dir)\n",
-        "val_coco_labels = convert_to_coco_labels(val_yolo_labels, val_images_dir)"
+        "val_coco_labels = convert_to_coco_labels(val_yolo_labels, val_images_dir)\n"
       ],
       "metadata": {
         "id": "Gvb9XHaPRbtw"
@@ -344,7 +348,68 @@
       ],
       "metadata": {
         "id": "YNtjA6M_RkJN",
-        "outputId": "c78200cb-060a-4f8b-bdda-64ed9d4fa1a8",
+        "outputId": "ecaab6ac-aa52-4446-9ec7-7890f59d9b4e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Conversión a etiquetas COCO Segmentation completada.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Guardamos el nuevo dataset con ambas etiquetas.\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wmbFum89GUbd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Directorio de origen\n",
+        "src_dir = \"/content/dataset_COCO\"\n",
+        "\n",
+        "# Directorio de destino\n",
+        "dest_dir = \"/content/drive/MyDrive/TFM/Dataset_Detectro2_Ids_Fix\"\n",
+        "\n",
+        "def copy_directory(src, dest):\n",
+        "    if not os.path.exists(dest):\n",
+        "        os.makedirs(dest)\n",
+        "\n",
+        "    for root, dirs, files in os.walk(src):\n",
+        "        for name in dirs:\n",
+        "            src_dir = os.path.join(root, name)\n",
+        "            dest_dir = os.path.join(dest, os.path.relpath(src_dir, src))\n",
+        "            if not os.path.exists(dest_dir):\n",
+        "                os.makedirs(dest_dir)\n",
+        "\n",
+        "        for name in files:\n",
+        "            src_file = os.path.join(root, name)\n",
+        "            dest_file = os.path.join(dest, os.path.relpath(src_file, src))\n",
+        "            if not os.path.exists(os.path.dirname(dest_file)):\n",
+        "                os.makedirs(os.path.dirname(dest_file))\n",
+        "            shutil.copy2(src_file, dest_file)\n",
+        "\n",
+        "# Copiar el directorio de origen al directorio de destino\n",
+        "copy_directory(src_dir, dest_dir)\n",
+        "\n",
+        "print(f\"Directorio copiado de {src_dir} a {dest_dir}\")"
+      ],
+      "metadata": {
+        "id": "7__LOo2SGWln",
+        "outputId": "d5dcb6d0-9ff0-424e-bd75-bc2a449c820c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -355,7 +420,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Conversión a etiquetas COCO Segmentation completada.\n"
+            "Directorio copiado de /content/dataset_COCO a /content/drive/MyDrive/TFM/Dataset_Detectro2_Ids_Fix\n"
           ]
         }
       ]
